Bug 331288 - Multiple widget move position problem
Summary: Multiple widget move position problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.2
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 336888 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-18 22:47 UTC by Ralf Habacker
Modified: 2014-07-06 17:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-02-18 22:47:14 UTC
After moving multiple vertical aligned widgets in a class diagram  the vertical position of the widgets differ.


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add 3 classes 
3. select all classes and "align vertical center" with the context menu
3. select the right two classes and move them up and down
Actual Results:  
Moved widgets do not have the same vertical position.


Expected Results:  
Moved widgets should have the same vertical position.
Comment 1 Ralf Habacker 2014-02-18 22:53:04 UTC
Git commit 90ed4eb9b37db58abe7534609251ba4c5cbe4494 by Ralf Habacker.
Committed on 18/02/2014 at 22:39.
Pushed by habacker into branch 'master'.

Fix of 'Multiple widget move position problem'

In the case of no grid snapping the widgets coordinates has been casted
to an int type.

M  +8    -4    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/90ed4eb9b37db58abe7534609251ba4c5cbe4494
Comment 2 Ralf Habacker 2014-02-18 22:54:55 UTC
Git commit 34c16bc963f95db5b464e242c4e7afa3241e50bc by Ralf Habacker.
Committed on 18/02/2014 at 22:39.
Pushed by habacker into branch 'KDE/4.12'.

Fix of 'Multiple widget move position problem'

In the case of no grid snapping the widgets coordinates has been casted
to an int type.
FIXED-IN:4.12.3
(cherry picked from commit 90ed4eb9b37db58abe7534609251ba4c5cbe4494)

M  +8    -4    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/34c16bc963f95db5b464e242c4e7afa3241e50bc
Comment 3 Ralf Habacker 2014-02-18 23:47:55 UTC
Git commit 6aa2b33f2e4a69b06cf30b87ceadccc84066760b by Ralf Habacker.
Committed on 18/02/2014 at 23:45.
Pushed by habacker into branch 'master'.

Fix of 'Multiple widget move position problem'.

In 'snap to grid' mode it is required to snap all selected widgets
instead of only the one under the cursor.

M  +1    -1    umbrello/widgets/umlwidget.cpp

http://commits.kde.org/umbrello/6aa2b33f2e4a69b06cf30b87ceadccc84066760b
Comment 4 Ralf Habacker 2014-02-18 23:53:10 UTC
Git commit fce4f13bce6c19c39f230e8f8befce4230ac65cf by Ralf Habacker.
Committed on 18/02/2014 at 23:45.
Pushed by habacker into branch 'KDE/4.12'.

Fix of 'Multiple widget move position problem'.

In 'snap to grid' mode it is required to snap all selected widgets
instead of only the one under the cursor.
FIXED-IN:4.12.3
(cherry picked from commit 6aa2b33f2e4a69b06cf30b87ceadccc84066760b)

Conflicts:
	umbrello/widgets/umlwidget.cpp

M  +1    -1    umbrello/widgets/umlwidget.cpp

http://commits.kde.org/umbrello/fce4f13bce6c19c39f230e8f8befce4230ac65cf
Comment 5 Ralf Habacker 2014-07-06 17:34:40 UTC
*** Bug 336888 has been marked as a duplicate of this bug. ***