Fix of 'Multiple widget move position problem'

In the case of no grid snapping the widgets coordinates has been casted
to an int type.

BUG:331288
FIXED-IN:4.12.3
(cherry picked from commit 90ed4eb9b37db58abe7534609251ba4c5cbe4494)